// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer should not render drawer if not authenticated: not authenticated 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      app="true"
      class="v-content"
      classname="mb-5"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <!---->
        <div
          id="test-contents"
        >
          contents
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Drawer should not render drawer if not opened: not opened 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      app="true"
      class="v-content"
      classname="mb-5"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <aside
          class="v-navigation-drawer v-navigation-drawer--close v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--temporary theme--dark secondary"
          style="height: 100%; top: 0px; transform: translateX(-100%); width: 256px;"
        >
          <div
            class="v-navigation-drawer__content"
          >
            <div
              class="v-list py-0 my-4 v-sheet v-sheet--tile theme--dark v-list--dense v-list--nav"
              role="list"
            >
              <div
                class="v-list-item v-list-item--two-line theme--dark"
                role="listitem"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  <img
                    src="https://randomuser.me/api/portraits/men/81.jpg"
                  />
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    テスト
                  </div>
                </div>
              </div>
               
              <hr
                aria-orientation="horizontal"
                class="v-divider theme--dark"
                role="separator"
              />
               
              <a
                class="v-list-item v-list-item--link theme--dark"
                href="#/test1"
                tabindex="0"
              >
                <div
                  class="v-list-item__icon"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-view-dashboard theme--dark"
                  />
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Test1
                  </div>
                </div>
              </a>
              <a
                class="v-list-item v-list-item--link theme--dark"
                href="#/test2"
                tabindex="0"
              >
                <div
                  class="v-list-item__icon"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-settings theme--dark"
                  />
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Test2
                  </div>
                </div>
              </a>
               
              <div
                class="v-list-item v-list-item--link theme--dark"
                role="listitem"
                tabindex="0"
              >
                <div
                  class="v-list-item__icon"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-logout theme--dark"
                  />
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Logout
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-navigation-drawer__border"
          />
        </aside>
        <div
          id="test-contents"
        >
          contents
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Drawer should render drawer: opened 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      app="true"
      class="v-content"
      classname="mb-5"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <aside
          class="v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open v-navigation-drawer--temporary theme--dark secondary"
          style="height: 100%; top: 0px; transform: translateX(0%); width: 256px;"
        >
          <div
            class="v-navigation-drawer__content"
          >
            <div
              class="v-list py-0 my-4 v-sheet v-sheet--tile theme--dark v-list--dense v-list--nav"
              role="list"
            >
              <div
                class="v-list-item v-list-item--two-line theme--dark"
                role="listitem"
                tabindex="-1"
              >
                <div
                  class="v-avatar v-list-item__avatar"
                  style="height: 40px; min-width: 40px; width: 40px;"
                >
                  <img
                    src="https://randomuser.me/api/portraits/men/81.jpg"
                  />
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    テスト
                  </div>
                </div>
              </div>
               
              <hr
                aria-orientation="horizontal"
                class="v-divider theme--dark"
                role="separator"
              />
               
              <a
                class="v-list-item v-list-item--link theme--dark"
                href="#/test1"
                tabindex="0"
              >
                <div
                  class="v-list-item__icon"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-view-dashboard theme--dark"
                  />
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Test1
                  </div>
                </div>
              </a>
              <a
                class="v-list-item v-list-item--link theme--dark"
                href="#/test2"
                tabindex="0"
              >
                <div
                  class="v-list-item__icon"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-settings theme--dark"
                  />
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Test2
                  </div>
                </div>
              </a>
               
              <div
                class="v-list-item v-list-item--link theme--dark"
                role="listitem"
                tabindex="0"
              >
                <div
                  class="v-list-item__icon"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate mdi mdi-logout theme--dark"
                  />
                </div>
                 
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                  >
                    Logout
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-navigation-drawer__border"
          />
        </aside>
        <div
          id="test-contents"
        >
          contents
        </div>
      </div>
    </main>
  </div>
</div>
`;
